# FinanseManager

./: .gitignore  README.md  pyproject.toml
apps/manager/: admin.py  apps.py  models.py  urls.py  views.py
apps/manager/migrations/: 0001_initial.py  0002_alter_category_options_alter_currency_options_and_more.py  0003_alter_operationtype_name.py  0004_alter_operationtype_name.py
apps/manager/templates/: all_operations.html  base.html
system/: settings.py  urls.py
