[tool.poetry]
name = "financemanagerdjango"
version = "0.1.0"
description = ""
authors = ["AleksandrBelyan <belyan.alex93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
